--- a/src/elements/ami-renderer-annotations.html
+++ b/src/elements/ami-renderer-annotations.html
@@ -94,7 +94,7 @@
       </div>
       <div hidden$=[[_fullAnnotations(annotations)]] id="topRight" class="top right information">
         <div>[[patientName]]</div>
-        <div>[[patientID]] (age: [[patientAge]], dob: [[patientBirthdate]])</div>
+        <div>[[patientId]] (age: [[patientAge]], dob: [[patientBirthdate]])</div>
         <div>[[studyDescription]]</div>
         <div>[[seriesDescription]]</div>
       </div>
@@ -125,7 +125,7 @@
             type: Number,
             notify: true,
           },
-          patientID: {
+          patientId: {
             type: String,
           },
           patientName: {
