--- a/src/gex-home.html
+++ b/src/gex-home.html
@@ -315,7 +315,7 @@
           hidden$="[[_hideControls(0, active)]]"
           annotations="{{annotations0}}"
           collapse="{{collapse}}"
-          color-Lut="{{colorLut0}}"
+          color-lut="{{colorLut0}}"
           layout="{{layout}}"
           orientation="{{orientation0}}"
           controls="{{controls}}"></control-panel-2d>
@@ -323,7 +323,7 @@
           hidden$="[[_hideControls(1, active)]]"
           annotations="{{annotations1}}"
           collapse="{{collapse}}"
-          color-Lut="{{colorLut1}}"
+          color-lut="{{colorLut1}}"
           layout="{{layout}}"
           orientation="{{orientation1}}"
           controls="{{controls}}"></control-panel-2d>
@@ -331,7 +331,7 @@
           hidden$="[[_hideControls(2, active)]]"
           annotations="{{annotations2}}"
           collapse="{{collapse}}"
-          color-Lut="{{colorLut2}}"
+          color-lut="{{colorLut2}}"
           layout="{{layout}}"
           orientation="{{orientation2}}"
           controls="{{controls}}"></control-panel-2d>
@@ -339,7 +339,7 @@
           hidden$="[[_hideControls(3, active)]]"
           annotations="{{annotations3}}"
           collapse="{{collapse}}"
-          color-Lut="{{colorLut3}}"
+          color-lut="{{colorLut3}}"
           layout="{{layout}}"
           orientation="{{orientation3}}"
           controls="{{controls}}"></control-panel-2d>
@@ -357,7 +357,8 @@
               data-uid="0"
               slot="s0"
               annotations="{{annotations0}}"
-              color-Lut="{{colorLut0}}"
+              color-lut="{{colorLut0}}"
+              cursor="{{cursor}}"
               orientation="{{orientation0}}"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
@@ -372,7 +373,8 @@
               data-uid="1"
               slot="s1"
               annotations="{{annotations1}}"
-              color-Lut="{{colorLut1}}"
+              color-lut="{{colorLut1}}"
+              cursor="{{cursor}}"
               orientation="{{orientation1}}"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
@@ -388,7 +390,8 @@
               data-uid="2"
               slot="s2"
               annotations="{{annotations2}}"
-              color-Lut="{{colorLut2}}"
+              color-lut="{{colorLut2}}"
+              cursor="{{cursor}}"
               orientation="{{orientation2}}"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
@@ -405,7 +408,8 @@
               slot="s3"
               drag
               annotations="{{annotations3}}"
-              color-Lut="{{colorLut3}}"
+              color-lut="{{colorLut3}}"
+              cursor="{{cursor}}"
               orientation="{{orientation3}}"
               index-max="10"
               on-enter-fullscreen="_onEnterFullscreen"
