--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -144,9 +144,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <gex-login
           name="login"
           on-login="handleLogin"></gex-login>
+          <!--           data-bch="[[data]]" -->
         <gex-home
           name="home"
-          data-bch="[[data]]"
           data-status-bch="[[dataStatus]]"
           data-ge="[[dataGE]]"
           data-status-ge="[[dataGEStatus]]"
