--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GEXplorer</title>
     <meta name="description" content="My App description">
 
-    <base href="/gex">
+    <base href="https://fnndsc.github.io/gex/">
 
     <link rel="icon" href="images/favicon.ico">
 
