--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       window.ChipsConfiguration = {
         'version': 'v1',
         'api': 'ultron',
-        'apiRoot': 'https://localhost:8050/api/v1', // no trailing /
+        'apiRoot': 'https://jsonplaceholder.typicode.com/api/v1', // no trailing /
       };
     </script>
 
