--- a/src/elements/ami-viewer.html
+++ b/src/elements/ami-viewer.html
@@ -129,7 +129,7 @@
               <paper-icon-button icon="av:subtitles" slot="dropdown-trigger" alt="menu"></paper-icon-button>
               <paper-listbox slot="dropdown-content" selected="{{annotations}}">
                 <paper-item>none</paper-item>
-                <paper-item>partial</paper-item>
+                <paper-item>basic</paper-item>
                 <paper-item>full</paper-item>
               </paper-listbox>
             </paper-menu-button>
